# rusty_stats

./: Cargo.toml  README.md
src/: lib.rs
src/distr/gaussian/: invnorm.rs  mod.rs  normalcdf.rs  normalpdf.rs
src/extra/: derivative.rs  erf.rs  erfinv.rs  integral.rs  mod.rs
