[package]
name = "rusty_stats"
version = "0.0.1"
authors = ["vedang"]
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/VLambda/rusty_stats/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    "assets/docs/katex.html",
]