[package]
name = "rusty_stats"
version = "0.0.1"
authors = ["vedang"]
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/VLambda/rusty_stats/"
description = "A Statistics Library made in pure Rust, for Rust!"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]